changed contact address

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								</ul>
 							</form>-->
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto:haus.grabherr@gmail.com">haus.grabherr@gmail.com</a></li>
 								<li class="icon brands fa-airbnb"><a href="#">airbnb/Haus Grabherr</a></li>
 								<li class="icon solid fa-home">
 									Haus Grabherr<br />
