minor text changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2 class="vidHead">Wilkommen beim Haus Grabherr</h2>
-							<p class="vidHead">Genießen Sie die Natur in Bildstein, Vorarlberg, Austria.</p>
+							<p class="vidHead">Genießen Sie die Natur in Bildstein, Vorarlberg, Österreich.</p>
 						</div>
 					</section>
 
@@ -71,7 +71,7 @@
 									<a href="#" class="image"><img src="images/pic02.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Freizeit</h2>
-										<p>Die Skigebiete des Bregenzerwaldes bieten während der Wintermonate attraktive Wintersportmöglichkeiten. In der Zeit vom 1. Mai bis 31. Oktober erhalten alle Gäste unseres Hauses die Bregenzerwald Gäste-Card, welche Fahrten mit öffentlichen Bussen, Fahrten mit Bergbahnen und Eintritt in Schwimmbäder. Die Region ist nicht nur für Wanderer, sondern auch für Rennrad und Mountain-Biker attraktiv.</p>
+										<p>Die Skigebiete des Bregenzerwaldes bieten während der Wintermonate attraktive Wintersportmöglichkeiten. In der Zeit vom 1. Mai bis 31. Oktober erhalten alle Gäste unseres Hauses die Bregenzerwald Gäste-Card, welche Fahrten mit öffentlichen Bussen, Fahrten mit Bergbahnen und Eintritte in Schwimmbäder inkludiert. Die Region ist nicht nur für Wanderer, sondern auch für Rennrad und Mountain-Biker attraktiv.</p>
 										<a href="https://www.bregenzerwald.at/thema/winter-aktivitaeten/" class="special">Winteraktivitäten</a>
 										<a href="https://www.bregenzerwald.at/thema/sommer-aktivitaeten/" class="special">Sommeraktivitäten</a>
 										<a href="https://www.bregenzerwald.at/aktivitaet/bregenzerwald-gaeste-card/" class="special">Zur Bregenzerwald Gäste-Card</a>
@@ -84,7 +84,7 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
+										<h2 class="major">Kulinarik</h2>
 										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
@@ -171,7 +171,6 @@
 								<li class="icon brands fa-airbnb"><a href="#">airbnb/Haus Grabherr</a></li>
 								<li class="icon solid fa-home">
 									Haus Grabherr<br />
-									Farnach 100<br />
 									6858 Bildstein
 								</li>
 							</ul>
