added another section

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/cheese.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Kulinarik</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>Genießen Sie feinste regionale Produkte wie Fleisch vom Alpschwein und Käseköstlichkeiten. Von Kässpätzle, über Kaiserschmarrn bis zum Riebel hat Vorarlberg einiges zu bieten.</p>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
