--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/cheese.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/cheese1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Kulinarik</h2>
 										<p>Genießen Sie feinste regionale Produkte wie Fleisch vom Alpschwein und Käseköstlichkeiten. Von Kässpätzle, über Kaiserschmarrn bis zum Riebel hat Vorarlberg einiges zu bieten.</p>
