--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<div class="content">
 										<h2 class="major">Kulinarik</h2>
 										<p>Genießen Sie feinste regionale Produkte wie Fleisch vom Alpschwein und Käseköstlichkeiten. Von Kässpätzle, über Kaiserschmarrn bis zum Riebel hat Vorarlberg einiges zu bieten.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://www.bregenzerwald.at/thema/essen/" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -146,7 +146,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Kontakt</h2>
-							<p>Falls wir Ihr Interresse für unser Ferienhaus geweckt haben, können Sie uns über das Kontaktformular oder per <a href="#">airbnb</a> kontaktieren.</p>
+							<p>Falls wir Ihr Interresse für unser Ferienhaus geweckt haben, können Sie uns per E-Mail oder per <a href="#">airbnb</a> kontaktieren.</p>
 							<!--<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
