--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<div class="content">
 										<h2 class="major">Kulinarik</h2>
 										<p>Genießen Sie feinste regionale Produkte wie Fleisch vom Alpschwein und Käseköstlichkeiten. Von Kässpätzle, über Kaiserschmarrn bis zum Riebel hat Vorarlberg einiges zu bieten.</p>
-										<a href="https://www.bregenzerwald.at/thema/essen/" class="special">Learn more</a>
+										<a href="https://www.bregenzerwald.at/thema/essen/" class="special">Mehr Informationen</a>
 									</div>
 								</div>
 							</section>
