fixed grammar errors

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<a href="#" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Entspannung</h2>
-										<p>Das Haus bietet eine große Terrasse, welche zum verweilen und entspannen einlädt. Zudem liegt das Haus idyllisch und ruhig in der Ortschaft Bildstein, wo unterschiedlichste Spaziergänge und Wanderungen möglich sind, die zur Erholung beitragen.</p>
+										<p>Das Haus bietet eine große Terrasse, welche zum Verweilen und Entspannen einlädt. Zudem liegt das Haus idyllisch und ruhig in der Ortschaft Bildstein, wo unterschiedlichste Spaziergänge und Wanderungen möglich sind, die zur Erholung beitragen.</p>
 									</div>
 								</div>
 							</section>
