fixed grammar errors

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/kitchen1.jpg" alt="" /></a>
 											<h3 class="major">Küche</h3>
-											<p>Die Küche verfügt über vier Herdplatten, Backofen, Toaster, Wasserkocher, Kaffekocher, Kühlschrank und über einen Geschirrspüler.</p>
+											<p>Die Küche verfügt über vier Herdplatten, Backofen, Toaster, Wasserkocher, Kaffeekocher, Kühlschrank und über einen Geschirrspüler.</p>
 											<!--<a href="#" class="special">Learn more</a>-->
 										</article>
 										<article>
