fixed grammar errors

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/bath.jpg" alt="" /></a>
 											<h3 class="major">Bad</h3>
-											<p>Das Bad bietet in einem Raum eine Dusche und die Toilette des Hauses.</p>
+											<p>Das Bad im Erdgeschoss beherbegt das WC und die Dusche.</p>
 											<!--<a href="#" class="special">Learn more</a>-->
 										</article>
 										<article>
